
	* epackage.el (epackage--layout-template-info): Rename field
	Elpa to Archve.
	(epackage-lint-extra-buffer-run-other-namespace): New.
	(epackage-devel-information-license-gpl-standard): Improve regexp.
	(epackage-batch-autoload-generate-loaddefs-dir): Rewrite.
	(epackage-devel-generate-loaddefs): Correct call to
	`epackage-autoload-generate-loaddefs-dir'.

2012-01-05 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-lint-extra-buffer-run-other-defcustom): New.
	(epackage-lint-extra-buffer-run-lm): Add 'ends here' check.
	(epackage-devel-information-license-gpl-standard): Increase
	search from 70 lines to 400.
	(epackage-interactive-p): New. Emacs 23.3 compatibility.
	(epackage--layout-template-info): Add "Elpa" field. Document thin
	in the spec.
	(epackage-locate-library): New.
	(epackage-pkg-depends-verify-main): Use `epackage-locate-library'.
	(epackage-lint-extra-buffer-run-other-keybindings): Check if
	`global-set-key' is inside defun before reporting.

2012-01-04 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--license-abbreviation-list): Rename.
	Was `epackage--info-mode-license-list'.
	(epackage-devel-compose-package-dir): Check lib-* package.
	(epackage-package-name-library-p): Correct function.
	(epackage-autoload-write-loaddefs-clean): New. SERIOUS ERROR
	FIXED. All generated autoload files in
	epackage/*-epkg-0loaddefs.el incorrectly contained relative apth
	names to file.
	(epackage-files-recursive-lisp): Correct returned dir list.
	(epackage-autoload-generate-loaddefs-dir): Add RECURSIVE arg.
	(epackage-autoload-write-loaddefs-clean): Simplify.
	(epackage-devel-generate-examples): Correct arg DIR handling.
	(epackage-devel-generate-compile-main): Correct arg DIR handling.
	(epackage-devel-generate-uninstall): Correct arg DIR handling.
	(epackage-error-if-not-directory): New.
	(epackage-devel-compose-package-dir): Always select some *.el
	file for epackage/info base.